apps/poc-apache-arrow/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-apache-arrow-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/acme-http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - poc-apache-arrow-qa.syntaxnow.com
    secretName: poc-apache-arrow-tls-cert
  rules:
  - host: poc-apache-arrow-qa.syntaxnow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poc-apache-arrow
            port:
              number: 80
